# beads

./: .buildflags  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG-fork.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEDERATION-SETUP.md  Makefile  NEWSLETTER.md  PROPOSAL-pluggable-storage-backends.md  PR_MAINTAINER_GUIDELINES.md  README.md  RELEASING.md  SECURITY.md  beads.go  beads_cgo.go  beads_nocgo.go  beads_test.go  claim.go  claim_roundtrip_test.go  claim_test.go  default.nix  errors_test.go  export_dependency_add_options_test.go  flake.nix  go.mod  go.sum  mint.sh  open_backend_selection_test.go  overlay.nix  query_interfaces_cgo_test.go  query_interfaces_test.go
.beads/: BD_GUIDE.md
.claude/: test-strategy.md
.claude-plugin/: marketplace.json
.devcontainer/: setup.sh
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
docs/: ADVANCED.md  AIDER_INTEGRATION.md  ARCHITECTURE.md  CLAUDE_INTEGRATION.md  CLI_REFERENCE.md  COMMUNITY_TOOLS.md  CONFIG.md  CONTRIBUTOR_NAMESPACE_ISOLATION.md  DOC_INVENTORY.md  DOLT-BACKEND.md  DOLT.md  FAQ.md  FEDERATION.md  GIT_INTEGRATION.md  INSTALLING.md  INTERNALS.md  JSON_SCHEMA.md  LABELS.md  LINTING.md  METADATA.md  MULTI_REPO_AGENTS.md  OBSERVABILITY.md  PLUGIN.md  PROJECT_CHARTER.md  PROTECTED_BRANCHES.md  QUICKSTART.md  RECOVERY.md  RELEASING.md  ROUTING.md  SETUP.md  STORAGE-BACKENDS.md  SYNC_CONCEPTS.md  SYNC_SETUP.md  TESTING.md  TESTING_PHILOSOPHY.md  TROUBLESHOOTING.md  UNINSTALLING.md  WORKTREES.md  cli-docs.pin  community-tools.md  (+6 more)
engdocs/: CI_CLEANUP_PLAN.md  CI_TEST_SURFACE_AUDIT.md  CLAUDE.md  COLLISION_MATH.md  CONTRIBUTOR_NAMESPACE_ISOLATION.md  ICU-POLICY.md  (+10 more)
tests/oracle-a/harness/: .gitignore  Cargo.toml  PROVENANCE.md
tests/oracle-a/harness/scenarios/: enumerated.json
tests/oracle-a/harness/src/: differential.rs  lib.rs  scenarios.rs
(+1517 files in other folders)
